[gd_scene load_steps=10 format=2]

[ext_resource path="res://class/CharacterSprite.gd" type="Script" id=1]
[ext_resource path="res://resource/collision_rect.tres" type="Shape2D" id=2]
[ext_resource path="res://scene/Zombie.gd" type="Script" id=3]
[ext_resource path="res://asset/Zombie_NORTH.png" type="Texture" id=4]
[ext_resource path="res://asset/Zombie_SIDE.png" type="Texture" id=5]
[ext_resource path="res://asset/Zombie_SOUTH.png" type="Texture" id=6]
[ext_resource path="res://asset/Zombie_hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/growl2.wav" type="AudioStream" id=8]
[ext_resource path="res://asset/kenney_impact-sounds/Audio/footstep_concrete_001.ogg" type="AudioStream" id=9]

[node name="Zombie" type="Area2D" groups=["enemy", "interactable"]]
script = ExtResource( 3 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 15, 15 )
shape = ExtResource( 2 )

[node name="CharacterSprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
script = ExtResource( 1 )
north_texture = ExtResource( 4 )
south_texture = ExtResource( 6 )
side_texture = ExtResource( 5 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SpawnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="WalkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="finished" from="HurtSFX" to="." method="_on_HurtSFX_finished"]
